# fonts-tlwg

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  thaifonts-scalable.spec.in
branches/tlwg/: ChangeLog  Makefile.am  thaifonts-scalable.spec.in
branches/tlwg/db/: Makefile.am
branches/tlwg/nf/: Garuda.sfd  GarudaBold.sfd  Norasi-Bold.sfd  Norasi.sfd
db/: DBThaiText-Bold.sfd  DBThaiText-BoldOblique.sfd  DBThaiText-Oblique.sfd  DBThaiText.sfd  DBThaiTextBold.sfd  DBThaiTextBoldItalic.sfd  DBThaiTextItalic.sfd  Makefile.am
fontconfig/: 90-ttf-thai-tlwg-synthetic.conf  Makefile.am
latex/: Makefile.am  README.latex  fonts-tlwg.sty  lthgaruda.fd  lthkinnari.fd  lthlaksaman.fd  lthloma.fd  lthnorasi-osf.fd  lthnorasi.fd  lthnorasij.fd  lthnorj.fd  lthnorx.fd  lthpurisa.fd  lthsawasdee.fd  lthtlwg-osf-sc.enc  lthtlwg-osf.enc  lthtlwg-sc.enc  lthttype.fd  lthttypist.fd  lthumpush.fd  lthwaree.fd  texfont.mk.am  thai-dummy.afm  thailigs-osf-sc.enc  thailigs-osf.enc  thailigs-sc.enc
latex/examples/: Makefile.am  digits-axes.tex  digits-cfr.tex  oldnum.tex  testsans.tex  testscaled-120.tex  testscaled-65.tex  testscaled.tex  teststd.tex  testxelatex.tex
nectec/: Loma-Bold.sfd  Loma-BoldOblique.sfd  Loma-Oblique.sfd  Loma.sfd  Makefile.am
nf/: Garuda-Bold.sfd  Garuda-BoldOblique.sfd  Garuda-Oblique.sfd  Garuda.sfd  GarudaBoldItalic.sfd  GarudaItalic.sfd  Kinnari-Bold.sfd  Kinnari-BoldItalic.sfd  Kinnari-BoldItalicBase.sfd  Kinnari-BoldOblique.sfd  Kinnari-Italic.sfd  Kinnari-ItalicBase.sfd  Kinnari-Oblique.sfd  Kinnari.sfd  Makefile.am  Norasi-Bold.sfd  Norasi-BoldItalic.sfd  Norasi-BoldOblique.sfd  Norasi-Italic.sfd  Norasi-Oblique.sfd  Norasi.sfd  NorasiPS.sfd
sipa/: Laksaman-Bold.sfd  Laksaman-BoldItalic.sfd  Laksaman-Italic.sfd  Laksaman.sfd  Makefile.am
tags/deb_0_4_14__1/tlwg/: Makefile.am  TlwgTypist.sfd
tags/deb_0_4_15_1/tests/: Makefile.am
tags/deb_0_4_16__1/nectec/: Makefile.am
tags/r_0_3_92/nf/: Makefile.am  Norasi-Bold.sfd  Norasi-BoldOblique.sfd
tags/r_0_4_1/tlwg/: Makefile.am  Purisa.sfd  TlwgMono-BoldOblique.sfd
tags/r_0_4_3/nectec/: Loma-BoldOblique.sfd  Loma-Oblique.sfd  Makefile.am
tags/r_0_4_3/tlwg/: Makefile.am  Purisa.sfd  TlwgTypewriter.sfd
tags/r_0_4_3_1/: Makefile.am  configure.in
tags/r_0_4_3_1/debian/: changelog  fonts.scale  ttf-thai-tlwg.dirs
tags/r_0_4_3_1/nectec/: Loma-Bold.sfd
tags/r_0_4_3_1/nf/: Garuda-Bold.sfd  Garuda-BoldOblique.sfd  Garuda-Oblique.sfd  Kinnari-Bold.sfd  Kinnari-Italic.sfd  Kinnari-Oblique.sfd  Kinnari.sfd  Norasi-Oblique.sfd
tags/r_0_4_3_1/scripts/: gen-test-otf.pe
tags/r_0_4_8/: AUTHORS  COPYING  ChangeLog  NEWS  configure.in
tlwg/: AUTHORS  Makefile.am  PseudoMono-Bold.sfd  PseudoMono-BoldOblique.sfd  PseudoMono-Oblique.sfd  Purisa-Bold.sfd  Purisa-BoldOblique.sfd  Purisa-Oblique.sfd  Purisa.sfd  Sawasdee-Bold.sfd  Sawasdee-BoldOblique.sfd  Sawasdee-Oblique.sfd  Sawasdee.sfd  SawasdeeBold.sfd  SawasdeeBoldOblique.sfd  SawasdeeOblique.sfd  TlwgMono-Bold.sfd  TlwgMono-BoldOblique.sfd  TlwgMono-Oblique.sfd  TlwgMono.sfd  TlwgTypewriter-Bold.sfd  TlwgTypewriter-BoldOblique.sfd  TlwgTypewriter-Oblique.sfd  TlwgTypewriter.sfd  TlwgTypist-Bold.sfd  TlwgTypist-BoldOblique.sfd  TlwgTypist-Oblique.sfd  TlwgTypist.sfd  TlwgTypo-Bold.sfd  TlwgTypo-BoldOblique.sfd  TlwgTypo-Oblique.sfd  TlwgTypo.sfd  Umpush-Bold.sfd  Umpush-BoldOblique.sfd  Umpush-Light.sfd  Umpush-LightOblique.sfd  Umpush-Oblique.sfd  Umpush.sfd  Verachart-Bold.sfd  Verachart-BoldOblique.sfd  (+6 more)
trunk/: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  configure.in  thaifonts-scalable.spec.in
trunk/db/: DBThaiText-Bold.sfd  DBThaiText-BoldOblique.sfd  DBThaiText-Oblique.sfd  DBThaiText.sfd  DBThaiTextBold.sfd  DBThaiTextBoldItalic.sfd  DBThaiTextItalic.sfd  Makefile.am
trunk/debian/: changelog  control  copyright  fonts-tlwg-kinnari.install  fonts-tlwg-mono.install  fonts-tlwg-sawasdee.install  latex-fonts-thai-tlwg.links  otf-thai-tlwg.defoma-hints  rules  t1-thai-tlwg.defoma-hints  t1-thai-tlwg.install  ttf-thai-tlwg-udeb.install  ttf-thai-tlwg.defoma-hints  ttf-thai-tlwg.install  ttf-thai-tlwg.templates
trunk/fontconfig/: 65-ttf-thai-tlwg.conf  89-tlwg-loma-synthetic.conf  89-ttf-thai-tlwg-synthetic.conf  90-ttf-thai-tlwg-synthetic.conf
trunk/latex/: Makefile.am  lthgaruda.fd  lthkinnari.fd  lthloma.fd  lthnorasi.fd  lthpurisa.fd  texfont.mk.am
trunk/nectec/: Loma-Bold.sfd  Loma-BoldOblique.sfd  Loma-Oblique.sfd  Loma.sfd  Makefile.am
trunk/nf/: Garuda-Bold.sfd  Garuda-BoldOblique.sfd  Garuda-Oblique.sfd  Garuda.sfd  Kinnari-Bold.sfd  Kinnari-BoldItalic.sfd  Kinnari-BoldItalicBase.sfd  Kinnari-BoldOblique.sfd  Kinnari-Italic.sfd  Kinnari-ItalicBase.sfd  Kinnari-Oblique.sfd  Kinnari.sfd  Makefile.am  Norasi-Bold.sfd  Norasi-BoldItalic.sfd  Norasi-BoldOblique.sfd  Norasi-Italic.sfd  Norasi-Oblique.sfd  Norasi.sfd  NorasiPS.sfd
trunk/scripts/: .cvsignore  Makefile.am  gen-pdfsample.sh.in  gen-pfa.pe  gen-pfb.pe  gen-test-otf.pe  gen-test-pfb.pe  gen.mk  gen.mk.am  gen.mk.in  thaikernpairs.txt
trunk/sipa/: Laksaman-Bold.sfd  Laksaman-BoldItalic.sfd  Laksaman-Italic.sfd  Laksaman.sfd
trunk/tests/: Makefile.am  gen-pdfsample.sh
trunk/tlwg/: AUTHORS  CREDITS  Makefile.am  PseudoMono-Bold.sfd  PseudoMono-BoldOblique.sfd  PseudoMono-Oblique.sfd  PseudoMono.sfd  Purisa-Bold.sfd  Purisa-BoldOblique.sfd  Purisa-Oblique.sfd  Purisa.sfd  Sawasdee-Bold.sfd  Sawasdee-BoldOblique.sfd  Sawasdee-Oblique.sfd  Sawasdee.sfd  SawasdeeBold.sfd  SawasdeeBoldOblique.sfd  SawasdeeOblique.sfd  TlwgMono-Bold.sfd  TlwgMono-BoldOblique.sfd  TlwgMono-Oblique.sfd  TlwgMono.sfd  TlwgTypewriter-Bold.sfd  TlwgTypewriter-BoldOblique.sfd  TlwgTypewriter-Oblique.sfd  TlwgTypewriter.sfd  TlwgTypist-Bold.sfd  TlwgTypist-BoldOblique.sfd  TlwgTypist-Oblique.sfd  TlwgTypist.sfd  TlwgTypo-Bold.sfd  TlwgTypo-BoldOblique.sfd  TlwgTypo-Oblique.sfd  TlwgTypo.sfd  Umpush-Bold.sfd  Umpush-BoldOblique.sfd  Umpush-Light.sfd  Umpush-LightOblique.sfd  Umpush-Oblique.sfd  Umpush.sfd  (+8 more)
(+661 files in other folders)
