FONTSOURCES = \
	DBThaiText-BoldOblique.sfd \
	DBThaiText-Bold.sfd \
	DBThaiText-Oblique.sfd \
	DBThaiText.sfd

FONTFILES = \
	DBThaiText-BoldOblique.ttf \
	DBThaiText-Bold.ttf \
	DBThaiText-Oblique.ttf \
	DBThaiText.ttf

MAINTAINERCLEANFILES = Makefile.in
DISTCLEANFILES = *.ttf *.g2n

EXTRA_DIST = $(FONTSOURCES)

font_DATA = $(FONTFILES)

include @top_builddir@/scripts/gen.mk

