FONTSOURCES = \
	DBThaiText-BoldOblique.sfd \
	DBThaiText-Bold.sfd \
	DBThaiText-Oblique.sfd \
	DBThaiText.sfd

TTFFILES = \
	DBThaiText-BoldOblique.ttf \
	DBThaiText-Bold.ttf \
	DBThaiText-Oblique.ttf \
	DBThaiText.ttf

MAINTAINERCLEANFILES = Makefile.in
DISTCLEANFILES = *.ttf *.g2n

EXTRA_DIST = $(FONTSOURCES)

ttf_DATA = $(TTFFILES)

include @top_builddir@/scripts/gen.mk

