CONFIG_FILES = \
	64-01-tlwg-kinnari.conf \
	64-02-tlwg-norasi.conf \
	64-11-tlwg-waree.conf \
	64-12-tlwg-loma.conf \
	64-13-tlwg-garuda.conf \
	64-14-tlwg-umpush.conf \
	64-21-tlwg-typo.conf \
	64-22-tlwg-typist.conf \
	64-23-tlwg-mono.conf \
	89-tlwg-garuda-synthetic.conf \
	89-tlwg-kinnari-synthetic.conf \
	89-tlwg-loma-synthetic.conf \
	89-tlwg-umpush-synthetic.conf \
	89-tlwg-waree-synthetic.conf \
	$(NULL)

EXTRA_DIST = $(CONFIG_FILES)

fontconfigdir = $(sysconfdir)/fonts/conf.avail

fontconfig_DATA = $(CONFIG_FILES)

